Fixed scrollbars appearing randomly, added rtl-language-support and editor-style tags

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ Lastly, Decode has social icons in the header that can link to your Twitter, App
 Version: 2.2.3
 License: GNU General Public License
 License URI: license.txt
-Tags: flexible-width, one-column, left-sidebar, right-sidebar, light, theme-options, post-formats, sticky-post, custom-background, custom-header
+Tags: flexible-width, one-column, left-sidebar, right-sidebar, light, theme-options, post-formats, sticky-post, custom-background, custom-header, rtl-language-support, editor-style
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned with others.
@@ -100,14 +100,13 @@ button,
 select,
 textarea {
 	color: #444444;
-	font: normal 300 165%/1.5em "Oxygen", sans-serif;
+	font: normal 300 165%/1.5em "Oxygen", "Helvetica Neue", sans-serif;
 }
 
 body {
 	background: #E3E5E7;
 	text-align: left;
 	margin: 0;
-	overflow: scroll;
 	-webkit-overflow-scrolling: touch;
 }
 
